--- a/Front/src/index.html
+++ b/Front/src/index.html
@@ -29,6 +29,8 @@
       href="https://fonts.googleapis.com/css2?family=Public+Sans:wght@300;400;500;600;700&display=swap"
       id="main-font-link"
     />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
+
   </head>
   <body part="preset-1">
     <app-root></app-root>
